--- a/site/html/media.html
+++ b/site/html/media.html
@@ -166,6 +166,32 @@
         </div>
         <!-- END LINK -->
 
+	<!-- LINK -->
+        <div class="box type5 linkFormat">
+            <div class="completeline">
+                <a href="http://portalwebdesigner.com/programacao/" target="validator">http://portalwebdesigner.com/programacao/</a>
+                <strong> - Linguagens para Programação Web </strong>
+            </div>
+            <br>
+            <div>
+                Postado por: <a href="group/mayara.html">Mayara</a>
+            </div>
+        </div>
+        <!-- END LINK -->
+        
+        	<!-- LINK -->
+        <div class="box type5 linkFormat">
+            <div class="completeline">
+                <a href="https://www.caelum.com.br/curso-html-css-javascript" target="validator">https://www.caelum.com.br/curso-html-css-javascript</a>
+                <strong> - Curso Desenvolvimento Web com HTML, CSS e JavaScript </strong>
+            </div>
+            <br>
+            <div>
+                Postado por: <a href="group/mayara.html">Mayara</a>
+            </div>
+        </div>
+        <!-- END LINK -->
+
     </div>
     
     <h3 id="video">Video</h3>
