adicionei o link de um trabalho que estava faltando

--- a/site/html/group/karen.html
+++ b/site/html/group/karen.html
@@ -78,7 +78,7 @@
     <ul class="coollist">
 	<li><span>Primeiro semestre de 2016:</span>
             <ul>
-                <li>Pesquisa/seminário: <strong>Impacto Social de TI</strong> <em>(para a disciplina de Seminários I)</em>: [<a href="" target="sem1">Trabalho</a>]</li>
+                <li>Pesquisa/seminário: <strong>Impacto Social de TI</strong> <em>(para a disciplina de Seminários I)</em>: [<a href="https://1drv.ms/p/s!Akfh3XG6oIIBhhru07ZOtQisoWxG" target="sem1">Trabalho</a>]</li>
             </ul>
 			<ul>
                 <li>Pesquisa: <strong>Viabilidade da Implementação de um Sistema Fotovoltaico em uma República de Estudantes na Região de Piracicaba </strong> <em>(para a disciplina de Metodologia do Trabalho Científico)</em>: [<a href="https://1drv.ms/w/s!Akfh3XG6oIIBgn6aEz-AOktEUCiY" target="metodologia">Trabalho</a>]</li>
