adicionei meus videos

--- a/site/html/media.html
+++ b/site/html/media.html
@@ -304,6 +304,32 @@
             </div>
         </div>
         <!-- END VIDEO -->
+		
+		<!-- VIDEO -->
+        <div class="box type1 linkFormat">
+            <div class="completeline">
+                <iframe src="https://www.youtube.com/embed/zoULsODQtCE" allowfullscreen class="videobox"></iframe>
+                <strong>Página de captura - Como fazer com HTML e CSS - Aula 1</strong>
+            </div>
+            <br>
+            <div>
+                Postado por: <a href="group/karen.html">Karen</a>
+            </div>
+        </div>
+        <!-- END VIDEO -->
+		
+		<!-- VIDEO -->
+        <div class="box type1 linkFormat">
+            <div class="completeline">
+                <iframe src="https://www.youtube.com/embed/_XAQH41rjio" allowfullscreen class="videobox"></iframe>
+                <strong>Change Style Sheet Using Javascript Tutorial CSS Swap Stylesheet</strong>
+            </div>
+            <br>
+            <div>
+                Postado por: <a href="group/karen.html">Karen</a>
+            </div>
+        </div>
+        <!-- END VIDEO -->
 
         <!-- VIDEO -->
         <div class="box type1 linkFormat">
