acertos na pagina de grupo

--- a/site/html/group.html
+++ b/site/html/group.html
@@ -2,7 +2,7 @@
 <html lang="pt">
 <head>
     <meta charset="UTF-8">
-    <title>Programação Web</title>
+    <title>Grupo</title>
 
     <link rel="shortcut icon" href="../media/images/icons/favicon1.ico" type="image/x-icon">
     <link rel="icon" href="../media/images/icons/favicon1.ico" type="image/x-icon">
@@ -81,10 +81,7 @@
         </div>
 
         <!-- PESSOA -->
-<<<<<<< HEAD
-=======
 
->>>>>>> origin/master
         <div class="box typePerson wrappableFlexBoxContent">
             <a href="group/karen.html">
                 <div class="icon personIcon" style="background-image: url('../media/images/pictures/karen.jpeg')">
@@ -95,11 +92,10 @@
             </p>
             <a class="centralizedText" href="mailto:k177493@g.unicamp.br" target="_top">e-mail</a>
         </div>
-<<<<<<< HEAD
-=======
+
 
 		<!-- PESSOA -->
->>>>>>> origin/master
+
 		<div class="box typePerson wrappableFlexBoxContent">
             <a href="group/">
                 <div class="icon personIcon" style="background-image: url('../media/images//pictures/pedro.jpg')">
@@ -109,12 +105,12 @@
                 <a href="group/" class="clear bold">Pedro Artico Rodrigues</a>
             </p>
             <a class="centralizedText" href="mailto:p185545@g.unicamp.br" target="_top">e-mail</a>
-<<<<<<< HEAD
+
 			</div>
-=======
+
 		</div>
 
->>>>>>> origin/master
+
 
 		<!-- PESSOA -->
 		<div class="box typePerson wrappableFlexBoxContent">
@@ -127,14 +123,13 @@
             </p>
             <a class="centralizedText" href="mailto:m184517@g.unicamp.br" target="_top">e-mail</a>
         </div>
-<<<<<<< HEAD
+
 	</br>
-=======
+
 
 
     </div>
 
->>>>>>> origin/master
     <h2>Contato com o grupo</h2>
     <p>
         O grupo pode ser contatado através do e-mail
