--- a/site/html/concepts.html
+++ b/site/html/concepts.html
@@ -2,7 +2,7 @@
 <html lang="pt">
 <head>
     <meta charset="UTF-8">
-    <title>Programação Web</title>
+    <title>Conceitos</title>
 
     <link rel="shortcut icon" href="../media/images/icons/favicon1.ico" type="image/x-icon">
     <link rel="icon" href="../media/images/icons/favicon1.ico" type="image/x-icon">
