--- a/site/html/group/andre.html
+++ b/site/html/group/andre.html
@@ -2,7 +2,7 @@
 <html lang="pt">
 <head>
     <meta charset="UTF-8">
-    <title>Programação Web</title>
+    <title>Perfil - André</title>
 
     <link rel="shortcut icon" href="../../media/images/icons/favicon1.ico" type="image/x-icon">
     <link rel="icon" href="../../media/images/icons/favicon1.ico" type="image/x-icon">
@@ -53,7 +53,7 @@
 
 <!-- CONTEÚDO -->
 <section class="content">
-    <div class="icon rounded" style="background-image: url('../../media/images/icons/23389143.png')"></div>
+    <div class="icon rounded" style="background-image: url('../../media/images/pictures/andre.png')"></div>
     <h2>André Luiz Rodrigues Estevam</h2>
 
     <h3>Biografia</h3>
