--- a/site/html/group.html
+++ b/site/html/group.html
@@ -59,13 +59,13 @@
                 <!-- PESSOA -->
         <div class="box typePerson wrappableFlexBoxContent">
             <a href="group/andre.html">
-                <div class="icon personIcon" style="background-image: url('../media/images/icons/23389143.png')">
+                <div class="icon personIcon" style="background-image: url('../media/images/pictures/andre.png')">
                 </div>
             </a>
             <p class="centralizedText">
                 <a href="group/andre.html" class="clear bold">André L. R. Estevam</a>
             </p>
-            <a class="centralizedText" href="mailto:a166348@g.unicamp.br" target="_top">e-mail</a>
+            <a class="centralizedText" href="mailto:a166348@g.unicamp.br" target="_top">E-mai de contato</a>
         </div>
 
         <!-- PESSOA -->
@@ -77,7 +77,7 @@
             <p class="centralizedText">
                 <a href="group/huanna.html" class="clear bold">Huanna Raquel do Nascimento</a>
             </p>
-            <a class="centralizedText" href="mailto:huanna_nascimento@outlook.com" target="_top">e-mail</a>
+            <a class="centralizedText" href="mailto:huanna_nascimento@outlook.com" target="_top">E-mai de contato</a>
         </div>
 
         <!-- PESSOA -->
@@ -90,7 +90,7 @@
             <p class="centralizedText">
                 <a href="group/karen.html" class="clear bold">Karen Esbaile Malzoni Rodrigues</a>
             </p>
-            <a class="centralizedText" href="mailto:k177493@g.unicamp.br" target="_top">e-mail</a>
+            <a class="centralizedText" href="mailto:k177493@g.unicamp.br" target="_top">E-mai de contato</a>
         </div>
 
 
@@ -104,7 +104,7 @@
             <p class="centralizedText">
                 <a href="group/" class="clear bold">Pedro Artico Rodrigues</a>
             </p>
-            <a class="centralizedText" href="mailto:p185545@g.unicamp.br" target="_top">e-mail</a>
+            <a class="centralizedText" href="mailto:p185545@g.unicamp.br" target="_top">E-mai de contato</a>
 
 			</div>
 
@@ -117,7 +117,7 @@
 				<p class="centralizedText">
 					<a href="group/mayara.html" class="clear bold">Mayara Naomi F. Ramos</a>
 				</p>
-				<a class="centralizedText" href="mailto:m184517@g.unicamp.br" target="_top">e-mail</a>
+				<a class="centralizedText" href="mailto:m184517@g.unicamp.br" target="_top">E-mai de contato</a>
 			</div>
 			
 		</div>
