--- a/site/html/group.html
+++ b/site/html/group.html
@@ -97,12 +97,12 @@
 		<!-- PESSOA -->
 
 		<div class="box typePerson wrappableFlexBoxContent">
-            <a href="group/">
+            <a href="group/pedro.html">
                 <div class="icon personIcon" style="background-image: url('../media/images//pictures/pedro.jpg')">
                 </div>
             </a>
             <p class="centralizedText">
-                <a href="group/" class="clear bold">Pedro Artico Rodrigues</a>
+                <a href="group/pedro.html" class="clear bold">Pedro Artico Rodrigues</a>
             </p>
             <a class="centralizedText" href="mailto:p185545@g.unicamp.br" target="_top">E-mai de contato</a>
 
