--- a/site/html/group/pedro.html
+++ b/site/html/group/pedro.html
@@ -54,7 +54,7 @@
 
     <!-- CONTEÚDO -->
     <section class="content">
-        <div class="icon rounded" style="background-image: url('../../media/images/icons/23389143.png')"></div>
+        <div class="icon rounded" style="background-image: url('../../media/images/pictures/pedro.jpg')"></div>
         <h2>Pedro Artico Rodrigues</h2>
 
         <h3>Biografia</h3>
