--- a/site/index.html
+++ b/site/index.html
@@ -124,12 +124,12 @@
 
         <!-- PESSOA -->
 		<div class="box typePerson wrappableFlexBoxContent">
-            <a href="html/group/">
+            <a href="html/group/pedro.html">
                 <div class="icon personIcon" style="background-image: url('media/images//pictures/pedro.jpg')">
                 </div>
             </a>
             <p class="centralizedText">
-                <a href="html/group/" class="clear bold">Pedro Artico Rodrigues</a>
+                <a href="html/group/pedro.html" class="clear bold">Pedro Artico Rodrigues</a>
             </p>
             <a class="centralizedText" href="mailto:p185545@g.unicamp.br" target="_top">E-mail de contato</a>
 			</div>
